--- a/templates/project_detail.html
+++ b/templates/project_detail.html
@@ -45,7 +45,7 @@
     <section style="margin-top: 4rem;">
         <h2>프로젝트 소개 (About Project)</h2>
         <div style="white-space: pre-line; margin-top: 1.5rem; color: #cbd5e1; line-height: 1.8;">
-            {{ project.details }}
+            {{ project.details | safe }}
         </div>
     </section>
 
