--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<section class="hero">
+<section class="hero" id="home">
     <div class="hero-content">
         <h1>
             Innovative <br>
@@ -11,7 +11,7 @@
             React, Flask, 그리고 Deep Learning을 활용하여<br>
             가치 있는 서비스를 만드는 개발자입니다.
         </p>
-        <a href="{{ url_for('projects_list') }}" class="btn btn-primary">프로젝트 보기</a>
+        <a href="#projects" class="btn btn-primary">프로젝트 보기</a>
     </div>
 </section>
 
@@ -96,7 +96,7 @@
         </div>
     </div>
 
-    <div class="category-section" style="margin-bottom: 4rem;">
+    <div class="category-section" style="margin-bottom: 4rem;" id="projects">
         <h3 style="border-left: 4px solid var(--accent-color); padding-left: 1rem; margin-bottom: 2rem;">Team Projects
         </h3>
         <div class="grid">
