add opengraph card

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <meta property="og:title" content="{{ site_name }} | {{ developer_name }}">
+    <meta property="og:description" content="{{ developer_name }}의 포트폴리오입니다.">
+    <meta property="og:image" content="{{ url_for('static', filename='favicon.ico') }}">
+    <meta property="og:url" content="https://github.com/winlakelee">
 </head>
 
 <body>
